--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
             <version>5.1.35</version>
         </dependency>
         
+        <dependency>
+            <groupId>javax.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
