--- a/pom.xml
+++ b/pom.xml
@@ -40,17 +40,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.35</version>
         </dependency>
-        
+                
         <dependency>
             <groupId>javax.faces</groupId>
-            <artifactId>jsf-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>4.0</version>
+            <artifactId>javax.faces-api</artifactId>
+            <version>2.2</version>
         </dependency>
 
     </dependencies>
